<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_list"
    android:elevation="10dp"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="15dp"
    android:padding="12dp"
    android:id="@+id/container_user_item_row">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingHorizontal="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="12sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:paddingVertical="8dp"
            android:paddingHorizontal="12dp"
            android:textColor="@color/primary"
            android:drawableEnd="@drawable/chevron_right_24px"
            android:drawableTint="@color/primary"
            android:drawablePadding="2dp"
            android:layout_gravity="center|end"
            android:gravity="center"
            android:textStyle="bold"
            tools:ignore="UseCompatTextViewDrawableXml" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>